--- a/tmux.conf
+++ b/tmux.conf
@@ -18,20 +18,44 @@ bind -n M-Down select-pane -D
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
-# set prefix
-unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
-
-set -g @catppuccin_flavour 'mocha'
-
-set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'schasse/tmux-jump'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tpm'
 
-run '~/.tmux/plugins/tpm/tpm'
+# set auto save and restore sessions
+set -g @continuum-restore 'on'
+
+# set auto tmux start when turn on computer
+set -g @continuum-boot 'on'
+set -g @continuum-boot-options 'iterm,fullscreen'
+
+# tmux ui
+set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
+
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_status_enable "yes"
+set -g @catppuccin_window_status_icon_enable "yes"
+
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_current_fill "all"
+
+set -g @catppuccin_window_default_text "#W" # use "#W" for application instead of directory
+set -g @catppuccin_window_current_text "#W" # use "#W" for application instead of directory
+
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_modules_right "directory session battery date_time"
+set -g @catppuccin_date_time_text "%d/%m/%Y %H:%M:%S"
+set -g @catppuccin_status_modules_left ""
 
 # set vi-mode
 set-window-option -g mode-keys vi
@@ -43,3 +67,4 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+run '~/.tmux/plugins/tpm/tpm'
