--- a/tmux.conf
+++ b/tmux.conf
@@ -8,16 +8,6 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
-
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -42,7 +32,7 @@ set -g @catppuccin_window_left_separator "█"
 set -g @catppuccin_window_middle_separator " | "
 set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_status_enable "yes"
+set -g @catppuccin_window_status_enable "no"
 set -g @catppuccin_window_status_icon_enable "yes"
 
 set -g @catppuccin_window_default_fill "none"
