--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,7 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'schasse/tmux-jump'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
@@ -20,6 +21,7 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # set auto save and restore sessions
 set -g @continuum-restore 'on'
+set -g @resurrect-capture-pane-contents 'on'
 
 # set auto tmux start when turn on computer
 set -g @continuum-boot 'on'
@@ -49,12 +51,31 @@ set -g @catppuccin_status_modules_left ""
 
 # set vi-mode
 set-window-option -g mode-keys vi
+
+# prefix
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
+
 # keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+# resize pane
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r h resize-pane -L 5
+bind -r m resize-pane -Z
+
+set -g @jump-key 'f'
+
+bind ';' split-window -v -c "#{pane_current_path}"
+bind ':' split-window -h -c "#{pane_current_path}"
+
+bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
+bind-key & kill-window # skip "kill-window 1? (y/n)" prompt
+set -g detach-on-destroy off  # don't exit from tmux when closing a session
 
 run '~/.tmux/plugins/tpm/tpm'
