--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,6 @@
 # set true color
-set-option -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal "tmux-256color"
+set -sg terminal-overrides ",*:RGB"
 set -g mouse on
 
 # Start windows and panes at 1, not 0
