--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+set-option -g status-position top
 
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
@@ -30,12 +31,11 @@ set -g @continuum-boot-options 'iterm,fullscreen'
 # tmux ui
 set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_middle_separator " | "
-set -g @catppuccin_window_right_separator "█ "
+# window 
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_middle_separator " "
+set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_status_enable "no"
-set -g @catppuccin_window_status_icon_enable "yes"
 
 set -g @catppuccin_window_default_fill "none"
 set -g @catppuccin_window_current_fill "all"
@@ -43,11 +43,16 @@ set -g @catppuccin_window_current_fill "all"
 set -g @catppuccin_window_default_text "#W" # use "#W" for application instead of directory
 set -g @catppuccin_window_current_text "#W" # use "#W" for application instead of directory
 
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator " "
+# status
+set -g @catppuccin_status_left_separator  ""
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "yes"
+set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_connect_separator "no"
+
 set -g @catppuccin_status_modules_right "directory session battery date_time"
+set -g @catppuccin_directory_text "#{pane_current_path}"
 set -g @catppuccin_date_time_text "%d/%m/%Y %H:%M:%S"
-set -g @catppuccin_status_modules_left ""
 
 # set vi-mode
 set-window-option -g mode-keys vi
