--- a/tmux.conf
+++ b/tmux.conf
@@ -33,7 +33,7 @@ set -g @catppuccin_flavour 'mocha' # or frappe, macchiato, mocha
 
 # window 
 set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_middle_separator " "
+set -g @catppuccin_window_middle_separator " | "
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_number_position "right"
 
