--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,16 @@ set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_middle_separator " | "
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_status_enable "yes"
+
+# icon
+set -g @catppuccin_icon_window_last " 󰖰 "
+set -g @catppuccin_icon_window_current " 󰖯 "
+set -g @catppuccin_icon_window_zoom " 󰁌 "
+set -g @catppuccin_icon_window_mark " 󰃀 "
+set -g @catppuccin_icon_window_silent " 󰂛 "
+set -g @catppuccin_icon_window_activity " 󰖲 "
+set -g @catppuccin_icon_window_bell " 󰂞 "
 
 set -g @catppuccin_window_default_fill "none"
 set -g @catppuccin_window_current_fill "all"
