--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,7 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 set-option -g status-position top
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
